--- a/css/common.css
+++ b/css/common.css
@@ -111,7 +111,7 @@
     margin-right: 24px;
     margin-top: 8px;
 }
-.f_head>div{
+.f_head>.shopcar{
     position: absolute;
     top: 0;
     right: 15px;
@@ -123,7 +123,7 @@
     color: f7f7f7;
     box-shadow: 0px 1px 2px;
 }
-.f_head>div>i{
+.f_head>.shopcar>i{
     background-color: red;
     position: absolute;
     font-size: 8px;
@@ -136,13 +136,13 @@
     color: #f7f7f7;
 }
 
-.f_head>div>a::after{
+.f_head>.shopcar>a::after{
     content: "\e920";
     font-family: "icomoon";
     padding-left: 1em;
 }
 
-.f_head>div>a::before{
+.f_head>.shopcar>a::before{
     content: "\e93a";
     font-family: "icomoon";
     color: #da5353;
@@ -206,6 +206,7 @@
 .footer{
     background-color:#f5f5f5;
     height: 417px;
+    margin-top: 10px;
 }
 .footer .describe::after{
     content: "";
